--- a/public/styles/categories.module.scss
+++ b/public/styles/categories.module.scss
@@ -74,3 +74,12 @@
     @include btnGeneral(.9em 1em, 1em, 700, 9px);
     @include btnBorederd(7px,var(--darkBlue), 1.5px solid var(--darkBlue),#fff );
 }
+
+@media only screen and (max-width : 769px) {
+	.questionItem{
+        font-size: .8em;
+	}
+    .tagsContainer{
+        width: 100%;
+    }
+}
