--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -162,6 +162,7 @@ select {
 	position: absolute;
     top: 0;
     right: 0;
+	width: 50%;
 }
 .border-lightBlue {
 	width: max-content;
@@ -175,10 +176,16 @@ select {
 .bg-darkBlue{
 	background-color: var(--darkBlue) !important;
 }
-@media only screen and (max-width : 1000px) {
-.mainContentContainer{
-		padding-left: 2em;
-		padding-right: 2em;
+@media only screen and (max-width : 1200px) {
+	.mainContentContainer{
+		padding-left: 3em;
+		padding-right: 3em;
+	}
+}
+@media only screen and (max-width : 1200px) {
+	.mainContentContainer{
+		padding-left: 1.5em;
+		padding-right: 1.5em;
 	}
 }
 .home-questionContainer{
@@ -186,4 +193,25 @@ select {
 	grid-template-columns: 3.2fr 1fr ;
 	grid-column-gap: 30px;
 	margin-top: 2.4em;
+	position: relative;
+	z-index: 10;
+}
+.w-mx-content{
+	width: max-content;
+}
+@media only screen and (max-width : 900px) {
+	.home-questionContainer{
+		grid-template-columns: 1fr ;
+	}
+	.aside{
+		display: none;
+	}
+	.fs-rsp {
+		font-size: .9em;
+	}
+}
+@media only screen and (max-width : 769px) {
+	.fs-rsp {
+		font-size: .8em;
+	}
 }
