--- a/public/styles/categories.module.scss
+++ b/public/styles/categories.module.scss
@@ -97,9 +97,12 @@
 // ---------------------------------- pagination ----------------------------------
 .paginationList{
     display: flex;
+
     justify-content: end;
+    flex-wrap: wrap;
     flex-direction: row-reverse;
     align-items: center;
+
 }
 .paginationItem{
     background-color: #fff;
