--- a/public/styles/headerFooter.module.scss
+++ b/public/styles/headerFooter.module.scss
@@ -2,7 +2,7 @@
 
 .header{
     position: relative;
-    z-index: 10;
+    z-index: 5;
     padding: 1em 0;
 }
 .installBtn{
@@ -146,6 +146,7 @@
 .footer{
     background-color: var(--darkBlue);
     padding: 2em 4em 1em 4em;
+    overflow: hidden;
 }
 .footer-contentContainer{
     display: grid;
@@ -352,16 +353,18 @@
 }
 @media only screen and (max-width : 450px ) {
     .logoImg {
-        width: 65px;
+        // width: 65px;
+        display: none;
     }
     .header{
         font-size: .8em;
     }
 }
 @media only screen and (max-width : 374px ) {
-    .logoImg {
-        width: 38px;
-    }
+    // .logoImg {
+    //     // width: 25px;
+    //     display: none;
+    // }
     .header{
         font-size: .7em;
     }
