--- a/public/styles/question.module.scss
+++ b/public/styles/question.module.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 3.5fr 1fr;
     grid-column-gap: 20px;
-    z-index: 5;
+    z-index: 3;
     position: relative;
 }
 .lastQuestionList{
@@ -82,6 +82,7 @@
 }
 .answerItem{
     display: flex;
+    margin-bottom: 1.7em;
 }
 @media only screen and (max-width : 800px) {
 	.contentContainer{
