--- a/public/styles/aboutUs.module.scss
+++ b/public/styles/aboutUs.module.scss
@@ -1,6 +1,7 @@
 .title{
     font-weight: 800;
     font-size: 1.9em;
+    margin-top: 1.6em;
 }
 .featurelistItem{
     list-style: disc;
@@ -13,15 +14,34 @@
     margin-top: 6em;
 }
 .stayInTouchBox{
-    width: 100%;
+    width: 70%;
     padding: 1.3em;
     background: linear-gradient(90deg, rgba(193, 200, 228, 0.70) 0%, rgba(132, 206, 235, 0.70) 0.01%, rgba(136, 96, 208, 0.70) 100%);
     border-radius: 15px;
     margin-top: 2em;
     text-align: center;
 }
+.contactMailIcon{
+    color: #fff;
+    margin-bottom: .6em;
+    font-weight: 800;
+    font-size: 2.8em;
+    animation: animateIcon .8s infinite alternate;
+}
+@keyframes animateIcon {
+    0%{
+        transform: rotate(-25deg) scale(1);
+    }
+    100%{
+        transform: rotate(15deg) scale(1.2);
+    }
+}
 @media only screen and (max-width : 600px) {
 	.title{
         font-size: 1.4em;
 	}
+    .stayInTouchBox{
+        width: 100%;
+        font-size: .93em;
+    }
 }
