--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -180,7 +180,10 @@ select {
 	background-color: var(--darkBlue) !important;
 }
 .oneLineText{
-	white-space : nowrap ;
+	white-space : nowrap;
+}
+.showHover{
+    box-shadow: 0 0 8px #00000058;
 }
 // ------------------------------------- multi select ---------------------------------- 
 .search-wrapper{
@@ -189,12 +192,180 @@ select {
     flex-direction: column-reverse;
 }
 .chip{
+	display: flex;
+	justify-content: space-between;
 	white-space: break-spaces !important;
 }
 .chip:last-of-type{
 	margin-top: 1em;
 }
-// -------------------------------------------------------------------------------------
+
+// -------------------------------------- loading -----------------------------------------------
+.lds-spinner {
+	color: official;
+	display: inline-block;
+	position: absolute;
+	// width: 80px;
+	// height: 80px;
+	top: 16%;
+  }
+  .lds-spinner div {
+	transform-origin: 40px 20px;
+	animation: lds-spinner 1.2s linear infinite;
+  }
+  .lds-spinner div:after {
+	content: " ";
+	display: block;
+	position: absolute;
+	top: 3px;
+	left: 37px;
+	width: 3px;
+	height: 11px;
+	border-radius: 20%;
+	background: darkBlue;
+  }
+  .lds-spinner div:nth-child(1) {
+	transform: rotate(0deg);
+	animation-delay: -1.1s;
+  }
+  .lds-spinner div:nth-child(2) {
+	transform: rotate(30deg);
+	animation-delay: -1s;
+  }
+  .lds-spinner div:nth-child(3) {
+	transform: rotate(60deg);
+	animation-delay: -0.9s;
+  }
+  .lds-spinner div:nth-child(4) {
+	transform: rotate(90deg);
+	animation-delay: -0.8s;
+  }
+  .lds-spinner div:nth-child(5) {
+	transform: rotate(120deg);
+	animation-delay: -0.7s;
+  }
+  .lds-spinner div:nth-child(6) {
+	transform: rotate(150deg);
+	animation-delay: -0.6s;
+  }
+  .lds-spinner div:nth-child(7) {
+	transform: rotate(180deg);
+	animation-delay: -0.5s;
+  }
+  .lds-spinner div:nth-child(8) {
+	transform: rotate(210deg);
+	animation-delay: -0.4s;
+  }
+  .lds-spinner div:nth-child(9) {
+	transform: rotate(240deg);
+	animation-delay: -0.3s;
+  }
+  .lds-spinner div:nth-child(10) {
+	transform: rotate(270deg);
+	animation-delay: -0.2s;
+  }
+  .lds-spinner div:nth-child(11) {
+	transform: rotate(300deg);
+	animation-delay: -0.1s;
+  }
+  .lds-spinner div:nth-child(12) {
+	transform: rotate(330deg);
+	animation-delay: 0s;
+  }
+  @keyframes lds-spinner {
+	0% {
+	  opacity: 1;
+	}
+	100% {
+	  opacity: 0;
+	}
+}
+
+
+.lds-default {
+	display: inline-block;
+	position: relative;
+	width: 110px;
+	height: 110px;
+  }
+  .lds-default div {
+	position: absolute;
+	width: 7px;
+	height: 7px;
+	background: var(--darkBlue);
+	border-radius: 50%;
+	animation: lds-default 1.2s linear infinite;
+  }
+  .lds-default div:nth-child(1) {
+	animation-delay: 0s;
+	top: 37px;
+	left: 66px;
+  }
+  .lds-default div:nth-child(2) {
+	animation-delay: -0.1s;
+	top: 22px;
+	left: 62px;
+  }
+  .lds-default div:nth-child(3) {
+	animation-delay: -0.2s;
+	top: 11px;
+	left: 52px;
+  }
+  .lds-default div:nth-child(4) {
+	animation-delay: -0.3s;
+	top: 7px;
+	left: 37px;
+  }
+  .lds-default div:nth-child(5) {
+	animation-delay: -0.4s;
+	top: 11px;
+	left: 22px;
+  }
+  .lds-default div:nth-child(6) {
+	animation-delay: -0.5s;
+	top: 22px;
+	left: 11px;
+  }
+  .lds-default div:nth-child(7) {
+	animation-delay: -0.6s;
+	top: 37px;
+	left: 7px;
+  }
+  .lds-default div:nth-child(8) {
+	animation-delay: -0.7s;
+	top: 52px;
+	left: 11px;
+  }
+  .lds-default div:nth-child(9) {
+	animation-delay: -0.8s;
+	top: 62px;
+	left: 22px;
+  }
+  .lds-default div:nth-child(10) {
+	animation-delay: -0.9s;
+	top: 66px;
+	left: 37px;
+  }
+  .lds-default div:nth-child(11) {
+	animation-delay: -1s;
+	top: 62px;
+	left: 52px;
+  }
+  .lds-default div:nth-child(12) {
+	animation-delay: -1.1s;
+	top: 52px;
+	left: 62px;
+  }
+  @keyframes lds-default {
+	0%, 20%, 80%, 100% {
+	  transform: scale(1);
+	}
+	50% {
+	  transform: scale(1.5);
+	}
+  }
+  
+//-----------------------------------------------------------------------------------------------
 @media only screen and (max-width : 1200px) {
 	.mainContentContainer{
 		padding-left: 3em;
@@ -217,6 +388,12 @@ select {
 }
 .w-mx-content{
 	width: max-content;
+}
+.txt-hidden-dots {
+	max-width: 130px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 @media only screen and (max-width : 900px) {
 	.home-questionContainer{
